<resources>
    <string name="app_name">My Application</string>
    <string name="the_courseapp">The CourseApp</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="send">Send</string>
    <string name="welcome">Welcome</string>
    <string name="message">Message</string>
    <string name="subject">Subject</string>
</resources>